--- a/fig.ipynb
+++ b/fig.ipynb
@@ -744,31 +744,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "b2d33b37-6673-4393-aeb9-78b6b81fe114",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'out/compare/LMGAOB/fold5_0/gigapath_uni_25/test/report.xlsx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 9\u001b[0m\n\u001b[1;32m      1\u001b[0m conds \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgigapath_uni_25\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfrozen_uni_25\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124munfrozen_baseline-vit_25\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      8\u001b[0m ]\n\u001b[0;32m----> 9\u001b[0m pd\u001b[38;5;241m.\u001b[39mDataFrame([\u001b[43mget_scores\u001b[49m\u001b[43m(\u001b[49m\u001b[43mc\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m conds], index\u001b[38;5;241m=\u001b[39mconds)\n",
-      "Cell \u001b[0;32mIn[16], line 36\u001b[0m, in \u001b[0;36mget_scores\u001b[0;34m(cond)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m fold \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m5\u001b[39m):\n\u001b[1;32m     35\u001b[0m     p \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mout/compare/LMGAOB/fold5_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfold\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcond\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/test/report.xlsx\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m---> 36\u001b[0m     df \u001b[38;5;241m=\u001b[39m \u001b[43mload_df\u001b[49m\u001b[43m(\u001b[49m\u001b[43mp\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     37\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     38\u001b[0m         value \u001b[38;5;241m=\u001b[39m fn(df)\n",
-      "Cell \u001b[0;32mIn[16], line 9\u001b[0m, in \u001b[0;36mload_df\u001b[0;34m(p)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m cache[p]\n\u001b[0;32m----> 9\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_excel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msheet_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mreport\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex_col\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m cache[p] \u001b[38;5;241m=\u001b[39m df\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m df\n",
-      "File \u001b[0;32m~/.virtualenvs/ml/lib/python3.12/site-packages/pandas/io/excel/_base.py:495\u001b[0m, in \u001b[0;36mread_excel\u001b[0;34m(io, sheet_name, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, parse_dates, date_parser, date_format, thousands, decimal, comment, skipfooter, storage_options, dtype_backend, engine_kwargs)\u001b[0m\n\u001b[1;32m    493\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(io, ExcelFile):\n\u001b[1;32m    494\u001b[0m     should_close \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m--> 495\u001b[0m     io \u001b[38;5;241m=\u001b[39m \u001b[43mExcelFile\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    496\u001b[0m \u001b[43m        \u001b[49m\u001b[43mio\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    497\u001b[0m \u001b[43m        \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    498\u001b[0m \u001b[43m        \u001b[49m\u001b[43mengine\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mengine\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    499\u001b[0m \u001b[43m        \u001b[49m\u001b[43mengine_kwargs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mengine_kwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    500\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    501\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m engine \u001b[38;5;129;01mand\u001b[39;00m engine \u001b[38;5;241m!=\u001b[39m io\u001b[38;5;241m.\u001b[39mengine:\n\u001b[1;32m    502\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    503\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEngine should not be specified when passing \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    504\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124man ExcelFile - ExcelFile already has the engine set\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    505\u001b[0m     )\n",
-      "File \u001b[0;32m~/.virtualenvs/ml/lib/python3.12/site-packages/pandas/io/excel/_base.py:1550\u001b[0m, in \u001b[0;36mExcelFile.__init__\u001b[0;34m(self, path_or_buffer, engine, storage_options, engine_kwargs)\u001b[0m\n\u001b[1;32m   1548\u001b[0m     ext \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mxls\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1549\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1550\u001b[0m     ext \u001b[38;5;241m=\u001b[39m \u001b[43minspect_excel_format\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1551\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcontent_or_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mpath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstorage_options\u001b[49m\n\u001b[1;32m   1552\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1553\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ext \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   1554\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m   1555\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExcel file format cannot be determined, you must specify \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1556\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124man engine manually.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1557\u001b[0m         )\n",
-      "File \u001b[0;32m~/.virtualenvs/ml/lib/python3.12/site-packages/pandas/io/excel/_base.py:1402\u001b[0m, in \u001b[0;36minspect_excel_format\u001b[0;34m(content_or_path, storage_options)\u001b[0m\n\u001b[1;32m   1399\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(content_or_path, \u001b[38;5;28mbytes\u001b[39m):\n\u001b[1;32m   1400\u001b[0m     content_or_path \u001b[38;5;241m=\u001b[39m BytesIO(content_or_path)\n\u001b[0;32m-> 1402\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mget_handle\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1403\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcontent_or_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstorage_options\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstorage_options\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mis_text\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\n\u001b[1;32m   1404\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m handle:\n\u001b[1;32m   1405\u001b[0m     stream \u001b[38;5;241m=\u001b[39m handle\u001b[38;5;241m.\u001b[39mhandle\n\u001b[1;32m   1406\u001b[0m     stream\u001b[38;5;241m.\u001b[39mseek(\u001b[38;5;241m0\u001b[39m)\n",
-      "File \u001b[0;32m~/.virtualenvs/ml/lib/python3.12/site-packages/pandas/io/common.py:882\u001b[0m, in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    873\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\n\u001b[1;32m    874\u001b[0m             handle,\n\u001b[1;32m    875\u001b[0m             ioargs\u001b[38;5;241m.\u001b[39mmode,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    878\u001b[0m             newline\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    879\u001b[0m         )\n\u001b[1;32m    880\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    881\u001b[0m         \u001b[38;5;66;03m# Binary mode\u001b[39;00m\n\u001b[0;32m--> 882\u001b[0m         handle \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mhandle\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mioargs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    883\u001b[0m     handles\u001b[38;5;241m.\u001b[39mappend(handle)\n\u001b[1;32m    885\u001b[0m \u001b[38;5;66;03m# Convert BytesIO or file objects passed with an encoding\u001b[39;00m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'out/compare/LMGAOB/fold5_0/gigapath_uni_25/test/report.xlsx'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>Accuracy(Patch)</th>\n",
+       "      <th>F1 score</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>AUROC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>frozen_gigapath_25</th>\n",
+       "      <td>0.927±(0.896-0.957)</td>\n",
+       "      <td>0.884±(0.862-0.905)</td>\n",
+       "      <td>0.841±(0.759-0.923)</td>\n",
+       "      <td>0.853±(0.783-0.924)</td>\n",
+       "      <td>0.850±(0.763-0.938)</td>\n",
+       "      <td>0.993±(0.987-0.999)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>frozen_uni_25</th>\n",
+       "      <td>0.927±(0.886-0.968)</td>\n",
+       "      <td>0.868±(0.840-0.895)</td>\n",
+       "      <td>0.846±(0.758-0.933)</td>\n",
+       "      <td>0.867±(0.765-0.969)</td>\n",
+       "      <td>0.855±(0.775-0.936)</td>\n",
+       "      <td>0.992±(0.986-0.998)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unfrozen_uni_25_1e-5</th>\n",
+       "      <td>0.932±(0.908-0.956)</td>\n",
+       "      <td>0.872±(0.844-0.900)</td>\n",
+       "      <td>0.858±(0.823-0.892)</td>\n",
+       "      <td>0.868±(0.824-0.913)</td>\n",
+       "      <td>0.868±(0.834-0.901)</td>\n",
+       "      <td>0.992±(0.984-0.999)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unfrozen_baseline-vit_25_1e-5</th>\n",
+       "      <td>0.871±(0.835-0.907)</td>\n",
+       "      <td>0.786±(0.759-0.813)</td>\n",
+       "      <td>0.779±(0.748-0.809)</td>\n",
+       "      <td>0.803±(0.755-0.851)</td>\n",
+       "      <td>0.786±(0.763-0.809)</td>\n",
+       "      <td>0.980±(0.970-0.991)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unfrozen_uni_25</th>\n",
+       "      <td>0.833±(0.777-0.890)</td>\n",
+       "      <td>0.760±(0.723-0.797)</td>\n",
+       "      <td>0.739±(0.641-0.837)</td>\n",
+       "      <td>0.776±(0.662-0.889)</td>\n",
+       "      <td>0.748±(0.645-0.851)</td>\n",
+       "      <td>0.977±(0.964-0.990)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unfrozen_baseline-vit_25</th>\n",
+       "      <td>0.808±(0.751-0.865)</td>\n",
+       "      <td>0.735±(0.686-0.783)</td>\n",
+       "      <td>0.675±(0.583-0.768)</td>\n",
+       "      <td>0.698±(0.599-0.796)</td>\n",
+       "      <td>0.694±(0.594-0.794)</td>\n",
+       "      <td>0.972±(0.959-0.984)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          Accuracy      Accuracy(Patch)  \\\n",
+       "frozen_gigapath_25             0.927±(0.896-0.957)  0.884±(0.862-0.905)   \n",
+       "frozen_uni_25                  0.927±(0.886-0.968)  0.868±(0.840-0.895)   \n",
+       "unfrozen_uni_25_1e-5           0.932±(0.908-0.956)  0.872±(0.844-0.900)   \n",
+       "unfrozen_baseline-vit_25_1e-5  0.871±(0.835-0.907)  0.786±(0.759-0.813)   \n",
+       "unfrozen_uni_25                0.833±(0.777-0.890)  0.760±(0.723-0.797)   \n",
+       "unfrozen_baseline-vit_25       0.808±(0.751-0.865)  0.735±(0.686-0.783)   \n",
+       "\n",
+       "                                          F1 score            Precision  \\\n",
+       "frozen_gigapath_25             0.841±(0.759-0.923)  0.853±(0.783-0.924)   \n",
+       "frozen_uni_25                  0.846±(0.758-0.933)  0.867±(0.765-0.969)   \n",
+       "unfrozen_uni_25_1e-5           0.858±(0.823-0.892)  0.868±(0.824-0.913)   \n",
+       "unfrozen_baseline-vit_25_1e-5  0.779±(0.748-0.809)  0.803±(0.755-0.851)   \n",
+       "unfrozen_uni_25                0.739±(0.641-0.837)  0.776±(0.662-0.889)   \n",
+       "unfrozen_baseline-vit_25       0.675±(0.583-0.768)  0.698±(0.599-0.796)   \n",
+       "\n",
+       "                                            Recall               AUROC   \n",
+       "frozen_gigapath_25             0.850±(0.763-0.938)  0.993±(0.987-0.999)  \n",
+       "frozen_uni_25                  0.855±(0.775-0.936)  0.992±(0.986-0.998)  \n",
+       "unfrozen_uni_25_1e-5           0.868±(0.834-0.901)  0.992±(0.984-0.999)  \n",
+       "unfrozen_baseline-vit_25_1e-5  0.786±(0.763-0.809)  0.980±(0.970-0.991)  \n",
+       "unfrozen_uni_25                0.748±(0.645-0.851)  0.977±(0.964-0.990)  \n",
+       "unfrozen_baseline-vit_25       0.694±(0.594-0.794)  0.972±(0.959-0.984)  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "conds = [\n",
-    "    'gigapath_uni_25',\n",
+    "    'frozen_gigapath_25',\n",
     "    'frozen_uni_25',\n",
     "    'unfrozen_uni_25_1e-5',\n",
     "    'unfrozen_baseline-vit_25_1e-5',\n",
