--- a/fig.ipynb
+++ b/fig.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "abe93111-f9f7-41fb-8def-fd49babfdc2b",
    "metadata": {},
    "outputs": [
@@ -24,6 +24,7 @@
     "import pandas as pd\n",
     "from IPython.display import display\n",
     "from ipywidgets import interact, FloatSlider\n",
+    "import re\n",
     "\n",
     "\n",
     "sns.set_theme(style=\"ticks\", palette=\"tab10\")\n",
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "b572447f-48ce-4794-9051-8a7534ab8666",
    "metadata": {},
    "outputs": [
@@ -282,139 +283,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "id": "1946e513-a562-413d-8d9c-906c1647e3c8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Accuracy</th>\n",
-       "      <th>Accuracy(Patch)</th>\n",
-       "      <th>F1 score</th>\n",
-       "      <th>Precision</th>\n",
-       "      <th>Recall</th>\n",
-       "      <th>AUROC</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>UNI(Enc+FC)</th>\n",
-       "      <td>0.944±(0.926-0.962)</td>\n",
-       "      <td>0.904±(0.888-0.920)</td>\n",
-       "      <td>0.872±(0.826-0.919)</td>\n",
-       "      <td>0.895±(0.857-0.934)</td>\n",
-       "      <td>0.880±(0.820-0.940)</td>\n",
-       "      <td>0.995±(0.990-0.999)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UNI(FC)</th>\n",
-       "      <td>0.944±(0.916-0.973)</td>\n",
-       "      <td>0.895±(0.869-0.922)</td>\n",
-       "      <td>0.880±(0.811-0.949)</td>\n",
-       "      <td>0.894±(0.833-0.955)</td>\n",
-       "      <td>0.878±(0.799-0.958)</td>\n",
-       "      <td>0.994±(0.989-0.999)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Prov-GigaPath(FC)</th>\n",
-       "      <td>0.947±(0.911-0.983)</td>\n",
-       "      <td>0.901±(0.881-0.922)</td>\n",
-       "      <td>0.877±(0.790-0.964)</td>\n",
-       "      <td>0.890±(0.812-0.967)</td>\n",
-       "      <td>0.881±(0.794-0.967)</td>\n",
-       "      <td>0.994±(0.989-0.999)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CTransPath(Enc+FC)</th>\n",
-       "      <td>0.934±(0.891-0.978)</td>\n",
-       "      <td>0.871±(0.843-0.898)</td>\n",
-       "      <td>0.876±(0.783-0.968)</td>\n",
-       "      <td>0.886±(0.792-0.981)</td>\n",
-       "      <td>0.877±(0.779-0.975)</td>\n",
-       "      <td>0.991±(0.982-0.999)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CTransPath(FC)</th>\n",
-       "      <td>0.927±(0.901-0.953)</td>\n",
-       "      <td>0.845±(0.820-0.870)</td>\n",
-       "      <td>0.839±(0.779-0.899)</td>\n",
-       "      <td>0.855±(0.783-0.928)</td>\n",
-       "      <td>0.853±(0.784-0.921)</td>\n",
-       "      <td>0.990±(0.981-0.999)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ResNet-RS 50(Enc+FC)</th>\n",
-       "      <td>0.924±(0.897-0.952)</td>\n",
-       "      <td>0.847±(0.828-0.865)</td>\n",
-       "      <td>0.833±(0.789-0.878)</td>\n",
-       "      <td>0.852±(0.790-0.913)</td>\n",
-       "      <td>0.835±(0.799-0.870)</td>\n",
-       "      <td>0.987±(0.979-0.995)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VIT-L(Enc+FC)</th>\n",
-       "      <td>0.937±(0.904-0.970)</td>\n",
-       "      <td>0.855±(0.834-0.877)</td>\n",
-       "      <td>0.858±(0.783-0.933)</td>\n",
-       "      <td>0.880±(0.811-0.949)</td>\n",
-       "      <td>0.861±(0.789-0.934)</td>\n",
-       "      <td>0.993±(0.987-0.998)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                 Accuracy      Accuracy(Patch)  \\\n",
-       "UNI(Enc+FC)           0.944±(0.926-0.962)  0.904±(0.888-0.920)   \n",
-       "UNI(FC)               0.944±(0.916-0.973)  0.895±(0.869-0.922)   \n",
-       "Prov-GigaPath(FC)     0.947±(0.911-0.983)  0.901±(0.881-0.922)   \n",
-       "CTransPath(Enc+FC)    0.934±(0.891-0.978)  0.871±(0.843-0.898)   \n",
-       "CTransPath(FC)        0.927±(0.901-0.953)  0.845±(0.820-0.870)   \n",
-       "ResNet-RS 50(Enc+FC)  0.924±(0.897-0.952)  0.847±(0.828-0.865)   \n",
-       "VIT-L(Enc+FC)         0.937±(0.904-0.970)  0.855±(0.834-0.877)   \n",
-       "\n",
-       "                                 F1 score            Precision  \\\n",
-       "UNI(Enc+FC)           0.872±(0.826-0.919)  0.895±(0.857-0.934)   \n",
-       "UNI(FC)               0.880±(0.811-0.949)  0.894±(0.833-0.955)   \n",
-       "Prov-GigaPath(FC)     0.877±(0.790-0.964)  0.890±(0.812-0.967)   \n",
-       "CTransPath(Enc+FC)    0.876±(0.783-0.968)  0.886±(0.792-0.981)   \n",
-       "CTransPath(FC)        0.839±(0.779-0.899)  0.855±(0.783-0.928)   \n",
-       "ResNet-RS 50(Enc+FC)  0.833±(0.789-0.878)  0.852±(0.790-0.913)   \n",
-       "VIT-L(Enc+FC)         0.858±(0.783-0.933)  0.880±(0.811-0.949)   \n",
-       "\n",
-       "                                   Recall               AUROC   \n",
-       "UNI(Enc+FC)           0.880±(0.820-0.940)  0.995±(0.990-0.999)  \n",
-       "UNI(FC)               0.878±(0.799-0.958)  0.994±(0.989-0.999)  \n",
-       "Prov-GigaPath(FC)     0.881±(0.794-0.967)  0.994±(0.989-0.999)  \n",
-       "CTransPath(Enc+FC)    0.877±(0.779-0.975)  0.991±(0.982-0.999)  \n",
-       "CTransPath(FC)        0.853±(0.784-0.921)  0.990±(0.981-0.999)  \n",
-       "ResNet-RS 50(Enc+FC)  0.835±(0.799-0.870)  0.987±(0.979-0.995)  \n",
-       "VIT-L(Enc+FC)         0.861±(0.789-0.934)  0.993±(0.987-0.998)  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrote out/figs/table2_org.xlsx\n"
+     ]
     }
    ],
    "source": [
@@ -430,13 +308,6 @@
     "    # cache[p] = df\n",
     "    return df\n",
     "\n",
-    "def calc_score(values):\n",
-    "    se = stats.sem(values)\n",
-    "    mean = np.mean(values)\n",
-    "    cis = stats.t.interval(confidence=0.95, df=len(values)-1, loc=mean, scale=se)\n",
-    "    return [mean, *cis]\n",
-    "\n",
-    "\n",
     "metrics = {\n",
     "    'Accuracy': lambda df: df[df.index == 'accuracy'].iloc[0, 0],\n",
     "    'Accuracy(Patch)': lambda df: df[df.index == 'patch acc'].iloc[0, 0],\n",
@@ -446,6 +317,10 @@
     "    'AUROC ': lambda df: df[df.index == 'auc'].iloc[0, 0],\n",
     "}\n",
     "\n",
+    "def remove_suffix(text, suffix):\n",
+    "    if text.endswith(suffix):\n",
+    "        return text[:-len(suffix)]\n",
+    "    return text\n",
     "\n",
     "def get_metrics(cond, label=True):\n",
     "    global cache\n",
@@ -466,21 +341,29 @@
     "        mm[k] = m\n",
     "    return mm\n",
     "\n",
-    "def metrics2score(mm):\n",
-    "    r = {}\n",
-    "    for k, values in mm.items():\n",
-    "        score = calc_score(values)\n",
-    "        r[k] = '{:.3f}±({:.3f}-{:.3f})'.format(*score)\n",
-    "    return r\n",
     "\n",
-    "conds = [\n",
-    "    'unfrozen_uni_100_1e-5',\n",
-    "    'frozen_uni_100',\n",
-    "    'frozen_gigapath_100',\n",
-    "    'unfrozen_ctranspath_100_1e-5',    \n",
-    "    'frozen_ctranspath_100',\n",
-    "    'unfrozen_baseline-vit_100_1e-5',\n",
-    "    'unfrozen_baseline-cnn_100',\n",
+    "def summary_cond(cond, label=None):\n",
+    "    if label is None:\n",
+    "        label = cond\n",
+    "    m = get_metrics(cond)\n",
+    "    df = pd.DataFrame(m)\n",
+    "    # df = pd.concat([pd.DataFrame([{'cond': cond}]*5), df])\n",
+    "    cond_org = remove_suffix(cond, '_1e-5')\n",
+    "    limit = int(re.match(r'^.*_(\\d+)$', cond_org)[1])\n",
+    "    df = pd.DataFrame([{'cond': cond, 'limit': limit, 'label': label}]*5).join(df)\n",
+    "    df = df.reset_index().rename(columns={'index': 'fold'})\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "\n",
+    "conds_base = [\n",
+    "    'unfrozen_uni_{}_1e-5',\n",
+    "    'frozen_uni_{}',\n",
+    "    'frozen_gigapath_{}',\n",
+    "    'unfrozen_ctranspath_{}_1e-5',    \n",
+    "    'frozen_ctranspath_{}',\n",
+    "    'unfrozen_baseline-vit_{}_1e-5',\n",
+    "    'unfrozen_baseline-cnn_{}',\n",
     "]\n",
     "labels = [\n",
     "    'UNI(Enc+FC)',\n",
@@ -492,16 +375,49 @@
     "    'VIT-L(Enc+FC)',\n",
     "]\n",
     "\n",
-    "def summary_metrics(conds):\n",
-    "    return [get_metrics(cond) for cond in conds]\n",
+    "with pd.ExcelWriter('out/figs/table2_org.xlsx') as w:\n",
+    "    for limit in [10, 25, 100, 500]:\n",
+    "        dfs = [summary_cond(c.format(limit), l) for c, l in zip(conds_base, labels)]\n",
+    "        df = pd.concat(dfs).reset_index(drop=True)\n",
+    "        df.to_excel(w, sheet_name=f'{limit}')\n",
     "\n",
-    "def summary_score(conds):\n",
-    "    return [metrics2score(get_metrics(cond)) for cond in conds]\n",
-    "        \n",
-    "scores = summary_score(conds)\n",
-    "df = pd.DataFrame(scores, index=labels)\n",
-    "df.to_excel('out/figs/table2.xlsx')\n",
-    "df"
+    "print('wrote out/figs/table2_org.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "007241f3-ea98-45f2-be0d-38a02f4e27e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrote out/figs/table2_mean.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "with pd.ExcelWriter('out/figs/table2_mean.xlsx') as w:\n",
+    "    for limit in [10, 25, 100, 500]:\n",
+    "        df = pd.read_excel('out/figs/table2_org.xlsx', sheet_name=f'{limit}', index_col=0)\n",
+    "        data = []\n",
+    "        labels = df['label'].unique()\n",
+    "        for l in labels:\n",
+    "            vvv = df[df['label'] == l]\n",
+    "            ss = {}\n",
+    "            for m in metrics:\n",
+    "                vv = vvv[m].values\n",
+    "                s = '{:.3f} ± {:.3f}'.format(np.mean(vv), stats.sem(vv))\n",
+    "                ss[m] = s\n",
+    "            data.append(ss)\n",
+    "        df2 = pd.DataFrame(data, index=labels)\n",
+    "        df2.to_excel(w, sheet_name=f'{limit}')\n",
+    "        w.sheets[f'{limit}'].set_column('A:A', 20)\n",
+    "        w.sheets[f'{limit}'].set_column('B:Z', 12)\n",
+    "\n",
+    "print('wrote out/figs/table2_mean.xlsx')"
    ]
   },
   {
