run on root dir

--- a/notes/note_fig.ipynb
+++ b/notes/note_fig.ipynb
@@ -2,13 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "b8b11ee1-cdca-4616-8e81-670abf0b88a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import re\n",
+    "import sys\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.insert(0, project_root)\n",
+    "os.chdir(project_root)\n",
     "\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
@@ -45,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "4aa41966-8223-41fb-b5eb-6d1caedb1592",
    "metadata": {},
    "outputs": [
