--- a/notes/note_metrics.ipynb
+++ b/notes/note_metrics.ipynb
@@ -17,6 +17,12 @@
    "source": [
     "import os\n",
     "import re\n",
+    "import sys\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.insert(0, project_root)\n",
+    "os.chdir(project_root)\n",
+    "\n",
     "from typing import Literal\n",
     "\n",
     "import seaborn as sns\n",
@@ -63,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "a35238c6-c491-4dd9-a5fd-2bc7a5c2de78",
    "metadata": {},
    "outputs": [
@@ -105,59 +111,59 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>UNI(Enc+FC)</th>\n",
-       "      <td>0.944 ± 0.006</td>\n",
-       "      <td>0.904 ± 0.006</td>\n",
-       "      <td>0.872 ± 0.017</td>\n",
-       "      <td>0.895 ± 0.014</td>\n",
-       "      <td>0.880 ± 0.022</td>\n",
+       "      <td>0.942 ± 0.012</td>\n",
+       "      <td>0.912 ± 0.005</td>\n",
+       "      <td>0.861 ± 0.031</td>\n",
+       "      <td>0.887 ± 0.037</td>\n",
+       "      <td>0.866 ± 0.026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>UNI(FC)</th>\n",
-       "      <td>0.944 ± 0.010</td>\n",
-       "      <td>0.895 ± 0.009</td>\n",
-       "      <td>0.880 ± 0.025</td>\n",
-       "      <td>0.894 ± 0.022</td>\n",
-       "      <td>0.878 ± 0.029</td>\n",
+       "      <td>0.949 ± 0.015</td>\n",
+       "      <td>0.904 ± 0.009</td>\n",
+       "      <td>0.885 ± 0.034</td>\n",
+       "      <td>0.917 ± 0.030</td>\n",
+       "      <td>0.883 ± 0.033</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Prov-GigaPath(FC)</th>\n",
-       "      <td>0.947 ± 0.013</td>\n",
-       "      <td>0.901 ± 0.007</td>\n",
-       "      <td>0.877 ± 0.031</td>\n",
-       "      <td>0.890 ± 0.028</td>\n",
-       "      <td>0.881 ± 0.031</td>\n",
+       "      <td>0.949 ± 0.014</td>\n",
+       "      <td>0.908 ± 0.008</td>\n",
+       "      <td>0.881 ± 0.035</td>\n",
+       "      <td>0.912 ± 0.030</td>\n",
+       "      <td>0.881 ± 0.036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CTransPath(Enc+FC)</th>\n",
-       "      <td>0.934 ± 0.016</td>\n",
-       "      <td>0.871 ± 0.010</td>\n",
-       "      <td>0.876 ± 0.033</td>\n",
-       "      <td>0.886 ± 0.034</td>\n",
-       "      <td>0.877 ± 0.035</td>\n",
+       "      <td>0.947 ± 0.015</td>\n",
+       "      <td>0.892 ± 0.007</td>\n",
+       "      <td>0.876 ± 0.034</td>\n",
+       "      <td>0.909 ± 0.030</td>\n",
+       "      <td>0.879 ± 0.033</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CTransPath(FC)</th>\n",
-       "      <td>0.927 ± 0.009</td>\n",
-       "      <td>0.845 ± 0.009</td>\n",
-       "      <td>0.839 ± 0.022</td>\n",
-       "      <td>0.855 ± 0.026</td>\n",
-       "      <td>0.853 ± 0.025</td>\n",
+       "      <td>0.939 ± 0.006</td>\n",
+       "      <td>0.865 ± 0.008</td>\n",
+       "      <td>0.866 ± 0.018</td>\n",
+       "      <td>0.887 ± 0.015</td>\n",
+       "      <td>0.870 ± 0.023</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>VIT-L$\\mathrm{_{IN}}$(Enc+FC)</th>\n",
-       "      <td>0.924 ± 0.010</td>\n",
-       "      <td>0.847 ± 0.007</td>\n",
-       "      <td>0.833 ± 0.016</td>\n",
-       "      <td>0.852 ± 0.022</td>\n",
-       "      <td>0.835 ± 0.013</td>\n",
+       "      <td>0.927 ± 0.010</td>\n",
+       "      <td>0.876 ± 0.009</td>\n",
+       "      <td>0.833 ± 0.031</td>\n",
+       "      <td>0.864 ± 0.035</td>\n",
+       "      <td>0.833 ± 0.030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ResNet-RS 50$\\mathrm{_{IN}}$(Enc+FC)</th>\n",
-       "      <td>0.937 ± 0.012</td>\n",
-       "      <td>0.855 ± 0.008</td>\n",
-       "      <td>0.858 ± 0.027</td>\n",
-       "      <td>0.880 ± 0.025</td>\n",
-       "      <td>0.861 ± 0.026</td>\n",
+       "      <td>0.937 ± 0.013</td>\n",
+       "      <td>0.880 ± 0.006</td>\n",
+       "      <td>0.845 ± 0.039</td>\n",
+       "      <td>0.858 ± 0.042</td>\n",
+       "      <td>0.853 ± 0.037</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -165,34 +171,34 @@
       ],
       "text/plain": [
        "                                           Accuracy Accuracy(Patch)  \\\n",
-       "UNI(Enc+FC)                           0.944 ± 0.006   0.904 ± 0.006   \n",
-       "UNI(FC)                               0.944 ± 0.010   0.895 ± 0.009   \n",
-       "Prov-GigaPath(FC)                     0.947 ± 0.013   0.901 ± 0.007   \n",
-       "CTransPath(Enc+FC)                    0.934 ± 0.016   0.871 ± 0.010   \n",
-       "CTransPath(FC)                        0.927 ± 0.009   0.845 ± 0.009   \n",
-       "VIT-L$\\mathrm{_{IN}}$(Enc+FC)         0.924 ± 0.010   0.847 ± 0.007   \n",
-       "ResNet-RS 50$\\mathrm{_{IN}}$(Enc+FC)  0.937 ± 0.012   0.855 ± 0.008   \n",
+       "UNI(Enc+FC)                           0.942 ± 0.012   0.912 ± 0.005   \n",
+       "UNI(FC)                               0.949 ± 0.015   0.904 ± 0.009   \n",
+       "Prov-GigaPath(FC)                     0.949 ± 0.014   0.908 ± 0.008   \n",
+       "CTransPath(Enc+FC)                    0.947 ± 0.015   0.892 ± 0.007   \n",
+       "CTransPath(FC)                        0.939 ± 0.006   0.865 ± 0.008   \n",
+       "VIT-L$\\mathrm{_{IN}}$(Enc+FC)         0.927 ± 0.010   0.876 ± 0.009   \n",
+       "ResNet-RS 50$\\mathrm{_{IN}}$(Enc+FC)  0.937 ± 0.013   0.880 ± 0.006   \n",
        "\n",
        "                                           F1 score      Precision  \\\n",
-       "UNI(Enc+FC)                           0.872 ± 0.017  0.895 ± 0.014   \n",
-       "UNI(FC)                               0.880 ± 0.025  0.894 ± 0.022   \n",
-       "Prov-GigaPath(FC)                     0.877 ± 0.031  0.890 ± 0.028   \n",
-       "CTransPath(Enc+FC)                    0.876 ± 0.033  0.886 ± 0.034   \n",
-       "CTransPath(FC)                        0.839 ± 0.022  0.855 ± 0.026   \n",
-       "VIT-L$\\mathrm{_{IN}}$(Enc+FC)         0.833 ± 0.016  0.852 ± 0.022   \n",
-       "ResNet-RS 50$\\mathrm{_{IN}}$(Enc+FC)  0.858 ± 0.027  0.880 ± 0.025   \n",
+       "UNI(Enc+FC)                           0.861 ± 0.031  0.887 ± 0.037   \n",
+       "UNI(FC)                               0.885 ± 0.034  0.917 ± 0.030   \n",
+       "Prov-GigaPath(FC)                     0.881 ± 0.035  0.912 ± 0.030   \n",
+       "CTransPath(Enc+FC)                    0.876 ± 0.034  0.909 ± 0.030   \n",
+       "CTransPath(FC)                        0.866 ± 0.018  0.887 ± 0.015   \n",
+       "VIT-L$\\mathrm{_{IN}}$(Enc+FC)         0.833 ± 0.031  0.864 ± 0.035   \n",
+       "ResNet-RS 50$\\mathrm{_{IN}}$(Enc+FC)  0.845 ± 0.039  0.858 ± 0.042   \n",
        "\n",
        "                                             Recall  \n",
-       "UNI(Enc+FC)                           0.880 ± 0.022  \n",
-       "UNI(FC)                               0.878 ± 0.029  \n",
-       "Prov-GigaPath(FC)                     0.881 ± 0.031  \n",
-       "CTransPath(Enc+FC)                    0.877 ± 0.035  \n",
-       "CTransPath(FC)                        0.853 ± 0.025  \n",
-       "VIT-L$\\mathrm{_{IN}}$(Enc+FC)         0.835 ± 0.013  \n",
-       "ResNet-RS 50$\\mathrm{_{IN}}$(Enc+FC)  0.861 ± 0.026  "
+       "UNI(Enc+FC)                           0.866 ± 0.026  \n",
+       "UNI(FC)                               0.883 ± 0.033  \n",
+       "Prov-GigaPath(FC)                     0.881 ± 0.036  \n",
+       "CTransPath(Enc+FC)                    0.879 ± 0.033  \n",
+       "CTransPath(FC)                        0.870 ± 0.023  \n",
+       "VIT-L$\\mathrm{_{IN}}$(Enc+FC)         0.833 ± 0.030  \n",
+       "ResNet-RS 50$\\mathrm{_{IN}}$(Enc+FC)  0.853 ± 0.037  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +237,7 @@
     "    print(f'wrote {P}')\n",
     "    return r \n",
     "    \n",
-    "dump_to_table('cv', 100)"
+    "dump_to_table('cv', 500)"
    ]
   },
   {
@@ -244,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "6beaf8bd-55de-4ec0-9fd1-898e5ab4f331",
    "metadata": {},
    "outputs": [
@@ -285,101 +291,92 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>UNI(Enc+FC)</th>\n",
-       "      <td>0.709 ± 0.007</td>\n",
-       "      <td>0.709 ± 0.007</td>\n",
-       "      <td>0.612 ± 0.005</td>\n",
-       "      <td>0.631 ± 0.004</td>\n",
-       "      <td>0.635 ± 0.004</td>\n",
+       "      <th>UNI(FT)</th>\n",
+       "      <td>0.697 ± 0.013</td>\n",
+       "      <td>0.697 ± 0.013</td>\n",
+       "      <td>0.598 ± 0.012</td>\n",
+       "      <td>0.616 ± 0.012</td>\n",
+       "      <td>0.625 ± 0.009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>UNI(FC)</th>\n",
-       "      <td>0.736 ± 0.003</td>\n",
-       "      <td>0.736 ± 0.003</td>\n",
-       "      <td>0.635 ± 0.003</td>\n",
-       "      <td>0.636 ± 0.002</td>\n",
-       "      <td>0.644 ± 0.003</td>\n",
+       "      <th>UNI(LP)</th>\n",
+       "      <td>0.754 ± 0.006</td>\n",
+       "      <td>0.754 ± 0.006</td>\n",
+       "      <td>0.647 ± 0.005</td>\n",
+       "      <td>0.648 ± 0.006</td>\n",
+       "      <td>0.658 ± 0.005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Prov-GigaPath(FC)</th>\n",
-       "      <td>0.727 ± 0.007</td>\n",
-       "      <td>0.727 ± 0.007</td>\n",
-       "      <td>0.622 ± 0.008</td>\n",
-       "      <td>0.638 ± 0.008</td>\n",
-       "      <td>0.632 ± 0.007</td>\n",
+       "      <th>Prov-GigaPath(LP)</th>\n",
+       "      <td>0.725 ± 0.008</td>\n",
+       "      <td>0.725 ± 0.008</td>\n",
+       "      <td>0.620 ± 0.008</td>\n",
+       "      <td>0.632 ± 0.006</td>\n",
+       "      <td>0.630 ± 0.006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CTransPath(Enc+FC)</th>\n",
-       "      <td>0.678 ± 0.006</td>\n",
-       "      <td>0.678 ± 0.006</td>\n",
-       "      <td>0.576 ± 0.004</td>\n",
-       "      <td>0.607 ± 0.010</td>\n",
-       "      <td>0.584 ± 0.003</td>\n",
+       "      <th>CTransPath(FT)</th>\n",
+       "      <td>0.675 ± 0.010</td>\n",
+       "      <td>0.675 ± 0.010</td>\n",
+       "      <td>0.584 ± 0.007</td>\n",
+       "      <td>0.593 ± 0.007</td>\n",
+       "      <td>0.600 ± 0.006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CTransPath(FC)</th>\n",
-       "      <td>0.664 ± 0.007</td>\n",
-       "      <td>0.664 ± 0.007</td>\n",
-       "      <td>0.578 ± 0.006</td>\n",
-       "      <td>0.599 ± 0.006</td>\n",
-       "      <td>0.575 ± 0.005</td>\n",
+       "      <th>CTransPath(LP</th>\n",
+       "      <td>0.688 ± 0.011</td>\n",
+       "      <td>0.688 ± 0.011</td>\n",
+       "      <td>0.596 ± 0.007</td>\n",
+       "      <td>0.614 ± 0.008</td>\n",
+       "      <td>0.601 ± 0.007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>VIT-L$\\mathrm{_{IN}}$(Enc+FC)</th>\n",
-       "      <td>0.581 ± 0.016</td>\n",
-       "      <td>0.581 ± 0.016</td>\n",
-       "      <td>0.504 ± 0.010</td>\n",
-       "      <td>0.512 ± 0.009</td>\n",
-       "      <td>0.524 ± 0.010</td>\n",
+       "      <th>VIT-L$\\mathrm{_{IN}}$(FT)</th>\n",
+       "      <td>0.603 ± 0.015</td>\n",
+       "      <td>0.603 ± 0.015</td>\n",
+       "      <td>0.519 ± 0.013</td>\n",
+       "      <td>0.547 ± 0.016</td>\n",
+       "      <td>0.550 ± 0.010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ResNet-RS 50$\\mathrm{_{IN}}$(Enc+FC)</th>\n",
-       "      <td>0.576 ± 0.014</td>\n",
-       "      <td>0.576 ± 0.014</td>\n",
-       "      <td>0.501 ± 0.014</td>\n",
-       "      <td>0.526 ± 0.015</td>\n",
-       "      <td>0.515 ± 0.011</td>\n",
+       "      <th>ResNet-RS 50$\\mathrm{_{IN}}$(FT)</th>\n",
+       "      <td>0.583 ± 0.016</td>\n",
+       "      <td>0.583 ± 0.016</td>\n",
+       "      <td>0.507 ± 0.014</td>\n",
+       "      <td>0.530 ± 0.016</td>\n",
+       "      <td>0.535 ± 0.010</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                           Accuracy Accuracy(Patch)  \\\n",
-       "UNI(Enc+FC)                           0.709 ± 0.007   0.709 ± 0.007   \n",
-       "UNI(FC)                               0.736 ± 0.003   0.736 ± 0.003   \n",
-       "Prov-GigaPath(FC)                     0.727 ± 0.007   0.727 ± 0.007   \n",
-       "CTransPath(Enc+FC)                    0.678 ± 0.006   0.678 ± 0.006   \n",
-       "CTransPath(FC)                        0.664 ± 0.007   0.664 ± 0.007   \n",
-       "VIT-L$\\mathrm{_{IN}}$(Enc+FC)         0.581 ± 0.016   0.581 ± 0.016   \n",
-       "ResNet-RS 50$\\mathrm{_{IN}}$(Enc+FC)  0.576 ± 0.014   0.576 ± 0.014   \n",
+       "                                       Accuracy Accuracy(Patch)  \\\n",
+       "UNI(FT)                           0.697 ± 0.013   0.697 ± 0.013   \n",
+       "UNI(LP)                           0.754 ± 0.006   0.754 ± 0.006   \n",
+       "Prov-GigaPath(LP)                 0.725 ± 0.008   0.725 ± 0.008   \n",
+       "CTransPath(FT)                    0.675 ± 0.010   0.675 ± 0.010   \n",
+       "CTransPath(LP                     0.688 ± 0.011   0.688 ± 0.011   \n",
+       "VIT-L$\\mathrm{_{IN}}$(FT)         0.603 ± 0.015   0.603 ± 0.015   \n",
+       "ResNet-RS 50$\\mathrm{_{IN}}$(FT)  0.583 ± 0.016   0.583 ± 0.016   \n",
        "\n",
-       "                                           F1 score      Precision  \\\n",
-       "UNI(Enc+FC)                           0.612 ± 0.005  0.631 ± 0.004   \n",
-       "UNI(FC)                               0.635 ± 0.003  0.636 ± 0.002   \n",
-       "Prov-GigaPath(FC)                     0.622 ± 0.008  0.638 ± 0.008   \n",
-       "CTransPath(Enc+FC)                    0.576 ± 0.004  0.607 ± 0.010   \n",
-       "CTransPath(FC)                        0.578 ± 0.006  0.599 ± 0.006   \n",
-       "VIT-L$\\mathrm{_{IN}}$(Enc+FC)         0.504 ± 0.010  0.512 ± 0.009   \n",
-       "ResNet-RS 50$\\mathrm{_{IN}}$(Enc+FC)  0.501 ± 0.014  0.526 ± 0.015   \n",
-       "\n",
-       "                                             Recall  \n",
-       "UNI(Enc+FC)                           0.635 ± 0.004  \n",
-       "UNI(FC)                               0.644 ± 0.003  \n",
-       "Prov-GigaPath(FC)                     0.632 ± 0.007  \n",
-       "CTransPath(Enc+FC)                    0.584 ± 0.003  \n",
-       "CTransPath(FC)                        0.575 ± 0.005  \n",
-       "VIT-L$\\mathrm{_{IN}}$(Enc+FC)         0.524 ± 0.010  \n",
-       "ResNet-RS 50$\\mathrm{_{IN}}$(Enc+FC)  0.515 ± 0.011  "
+       "                                       F1 score      Precision         Recall  \n",
+       "UNI(FT)                           0.598 ± 0.012  0.616 ± 0.012  0.625 ± 0.009  \n",
+       "UNI(LP)                           0.647 ± 0.005  0.648 ± 0.006  0.658 ± 0.005  \n",
+       "Prov-GigaPath(LP)                 0.620 ± 0.008  0.632 ± 0.006  0.630 ± 0.006  \n",
+       "CTransPath(FT)                    0.584 ± 0.007  0.593 ± 0.007  0.600 ± 0.006  \n",
+       "CTransPath(LP                     0.596 ± 0.007  0.614 ± 0.008  0.601 ± 0.007  \n",
+       "VIT-L$\\mathrm{_{IN}}$(FT)         0.519 ± 0.013  0.547 ± 0.016  0.550 ± 0.010  \n",
+       "ResNet-RS 50$\\mathrm{_{IN}}$(FT)  0.507 ± 0.014  0.530 ± 0.016  0.535 ± 0.010  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dump_to_table('ebrains', 100)"
+    "dump_to_table('ebrains', 500)"
    ]
   },
   {
