--- a/notes/note_dataset.ipynb
+++ b/notes/note_dataset.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "73fc570a-1d12-422f-ac04-bd4f90e6f14d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from endaaman.ml import tensor_to_pil"
+    "import os\n",
+    "import re\n",
+    "import sys\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.insert(0, project_root)\n",
+    "os.chdir(project_root)\n",
+    "\n",
+    "from endaaman.ml import tensor_to_pil\n",
+    "from datasets.ebrains import EBRAINSDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1e8672fb-6102-4392-a00d-e8b90903d15e",
    "metadata": {},
    "outputs": [
@@ -20,92 +29,229 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading L\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 59/59 [00:01<00:00, 38.79it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading M\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 47/47 [00:01<00:00, 40.76it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading G\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 107/107 [00:05<00:00, 19.09it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 47/47 [00:02<00:00, 23.03it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 70/70 [00:01<00:00, 36.30it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading O\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 85/85 [00:02<00:00, 38.17it/s]\n"
+      "Using cache: data/EBRAINS\n"
      ]
     }
    ],
    "source": [
-    "from datasets.ebrains import EBRAINSDataset\n",
-    "\n",
     "ds= EBRAINSDataset(crop_size=512, patch_size=224, normalization=False)\n",
     "os.makedirs('tmp/ebrains', exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5db3bcfc-860f-487b-97f7-136621d7f3f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>path</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>label</th>\n",
+       "      <th>image</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8611</th>\n",
+       "      <td>a1978fd9-357f-11eb-a380-001a7dda7111</td>\n",
+       "      <td>data/EBRAINS/cache/O/a1978fd9-357f-11eb-a380-0...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>O</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8610</th>\n",
+       "      <td>a1978fd9-357f-11eb-a380-001a7dda7111</td>\n",
+       "      <td>data/EBRAINS/cache/O/a1978fd9-357f-11eb-a380-0...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>O</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8609</th>\n",
+       "      <td>a1978fd9-357f-11eb-a380-001a7dda7111</td>\n",
+       "      <td>data/EBRAINS/cache/O/a1978fd9-357f-11eb-a380-0...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>O</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8608</th>\n",
+       "      <td>a1978fd9-357f-11eb-a380-001a7dda7111</td>\n",
+       "      <td>data/EBRAINS/cache/O/a1978fd9-357f-11eb-a380-0...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>O</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8607</th>\n",
+       "      <td>a1978fd9-357f-11eb-a380-001a7dda7111</td>\n",
+       "      <td>data/EBRAINS/cache/O/a1978fd9-357f-11eb-a380-0...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>O</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>a19852f7-357f-11eb-9a9f-001a7dda7111</td>\n",
+       "      <td>data/EBRAINS/cache/L/a19852f7-357f-11eb-9a9f-0...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>L</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>a19852f7-357f-11eb-9a9f-001a7dda7111</td>\n",
+       "      <td>data/EBRAINS/cache/L/a19852f7-357f-11eb-9a9f-0...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>L</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>a19852f7-357f-11eb-9a9f-001a7dda7111</td>\n",
+       "      <td>data/EBRAINS/cache/L/a19852f7-357f-11eb-9a9f-0...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>L</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a19852f7-357f-11eb-9a9f-001a7dda7111</td>\n",
+       "      <td>data/EBRAINS/cache/L/a19852f7-357f-11eb-9a9f-0...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>L</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a19852f7-357f-11eb-9a9f-001a7dda7111</td>\n",
+       "      <td>data/EBRAINS/cache/L/a19852f7-357f-11eb-9a9f-0...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>L</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8612 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      name  \\\n",
+       "8611  a1978fd9-357f-11eb-a380-001a7dda7111   \n",
+       "8610  a1978fd9-357f-11eb-a380-001a7dda7111   \n",
+       "8609  a1978fd9-357f-11eb-a380-001a7dda7111   \n",
+       "8608  a1978fd9-357f-11eb-a380-001a7dda7111   \n",
+       "8607  a1978fd9-357f-11eb-a380-001a7dda7111   \n",
+       "...                                    ...   \n",
+       "4     a19852f7-357f-11eb-9a9f-001a7dda7111   \n",
+       "3     a19852f7-357f-11eb-9a9f-001a7dda7111   \n",
+       "2     a19852f7-357f-11eb-9a9f-001a7dda7111   \n",
+       "1     a19852f7-357f-11eb-9a9f-001a7dda7111   \n",
+       "0     a19852f7-357f-11eb-9a9f-001a7dda7111   \n",
+       "\n",
+       "                                                   path  x  y  X  Y label  \\\n",
+       "8611  data/EBRAINS/cache/O/a1978fd9-357f-11eb-a380-0...  4  2  5  3     O   \n",
+       "8610  data/EBRAINS/cache/O/a1978fd9-357f-11eb-a380-0...  3  2  5  3     O   \n",
+       "8609  data/EBRAINS/cache/O/a1978fd9-357f-11eb-a380-0...  2  2  5  3     O   \n",
+       "8608  data/EBRAINS/cache/O/a1978fd9-357f-11eb-a380-0...  1  2  5  3     O   \n",
+       "8607  data/EBRAINS/cache/O/a1978fd9-357f-11eb-a380-0...  0  2  5  3     O   \n",
+       "...                                                 ... .. .. .. ..   ...   \n",
+       "4     data/EBRAINS/cache/L/a19852f7-357f-11eb-9a9f-0...  4  0  5  3     L   \n",
+       "3     data/EBRAINS/cache/L/a19852f7-357f-11eb-9a9f-0...  3  0  5  3     L   \n",
+       "2     data/EBRAINS/cache/L/a19852f7-357f-11eb-9a9f-0...  2  0  5  3     L   \n",
+       "1     data/EBRAINS/cache/L/a19852f7-357f-11eb-9a9f-0...  1  0  5  3     L   \n",
+       "0     data/EBRAINS/cache/L/a19852f7-357f-11eb-9a9f-0...  0  0  5  3     L   \n",
+       "\n",
+       "     image  \n",
+       "8611  None  \n",
+       "8610  None  \n",
+       "8609  None  \n",
+       "8608  None  \n",
+       "8607  None  \n",
+       "...    ...  \n",
+       "4     None  \n",
+       "3     None  \n",
+       "2     None  \n",
+       "1     None  \n",
+       "0     None  \n",
+       "\n",
+       "[8612 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame([i.asdict() for i in ds.items])\n"
    ]
   },
   {
