--- a/notes/note_metrics.ipynb
+++ b/notes/note_metrics.ipynb
@@ -18,16 +18,11 @@
     "import os\n",
     "import re\n",
     "import sys\n",
-    "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
-    "if project_root not in sys.path:\n",
-    "    sys.path.insert(0, project_root)\n",
-    "os.chdir(project_root)\n",
     "\n",
-    "from typing import Literal\n",
-    "\n",
-    "import seaborn as sns\n",
+    "import numpy as np\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import seaborn as sns\n",
     "from sklearn import metrics as skmetrics\n",
     "from scipy import stats\n",
     "import matplotlib.pyplot as plt\n",
@@ -35,6 +30,15 @@
     "from matplotlib.font_manager import fontManager\n",
     "from IPython.display import display\n",
     "from ipywidgets import interact, FloatSlider\n",
+    "from umap import UMAP\n",
+    "import ipynbname\n",
+    "from endaaman.ml import fix_global_seed\n",
+    "\n",
+    "project_root = os.path.abspath(os.path.join(os.path.dirname(ipynbname.path()), '..'))\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.insert(0, project_root)\n",
+    "os.chdir(project_root)\n",
+    "print('now working', project_root)\n",
     "\n",
     "\n",
     "sns.set_theme(style=\"ticks\", palette=\"tab10\")\n",
@@ -49,16 +53,12 @@
     "\n",
     "os.makedirs('out/figs', exist_ok=True)\n",
     "\n",
+    "fix_global_seed()\n",
+    "\n",
     "print(f\"デフォルトのフォント: {plt.rcParams['font.sans-serif']}\")\n",
     "# print(', '.join(sorted(list(set([font.name for font in fontManager.ttflist if not font.name.startswith('Noto')])))))\n",
     "\n",
-    "\n",
-    "DPI = 600\n",
-    "\n",
-    "# def show_pal0(palette):\n",
-    "#     sns.palplot(sns.color_palette(palette, 24))\n",
-    "#     print(palette)\n",
-    "# interact(show_pal0, palette='deep muted pastel bright dark colorblind'.split());"
+    "DPI = 600"
    ]
   },
   {
