--- a/notes/note_patch_emb.ipynb
+++ b/notes/note_patch_emb.ipynb
@@ -7,17 +7,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from torchvision.models import vit_b_16, ViT_B_16_Weights\n",
-    "from torchvision.transforms import transforms\n",
-    "from torchvision.transforms.functional import resize\n",
-    "import timm\n",
-    "from PIL import Image\n",
+    "import os\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
     "import numpy as np\n",
-    "from sklearn.decomposition import PCA\n",
-    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from sklearn import metrics as skmetrics\n",
+    "from scipy import stats\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import gridspec\n",
+    "from matplotlib.font_manager import fontManager\n",
     "from IPython.display import display\n",
+    "from ipywidgets import interact, FloatSlider\n",
+    "from umap import UMAP\n",
+    "import ipynbname\n",
+    "from endaaman.ml import fix_global_seed\n",
     "\n",
+    "project_root = os.path.abspath(os.path.join(os.path.dirname(ipynbname.path()), '..'))\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.insert(0, project_root)\n",
+    "os.chdir(project_root)\n",
+    "print('now working', project_root)\n",
+    "\n",
+    "\n",
+    "sns.set_theme(style=\"ticks\", palette=\"tab10\")\n",
+    "# sns.set_theme(style=\"white\")\n",
+    "# plt.rcParams['font.family'] = 'DejaVu Sans'\n",
+    "# plt.rcParams['font.family'] = 'Verdana'\n",
+    "plt.rcParams['font.size'] = 10  \n",
+    "plt.rcParams['axes.labelsize'] = 12  \n",
+    "plt.rcParams['axes.titlesize'] = 14  \n",
+    "plt.rcParams['xtick.labelsize'] = 10  \n",
+    "plt.rcParams['ytick.labelsize'] = 10 \n",
+    "\n",
+    "os.makedirs('out/figs', exist_ok=True)\n",
+    "\n",
+    "fix_global_seed()\n",
+    "\n",
+    "print(f\"デフォルトのフォント: {plt.rcParams['font.sans-serif']}\")\n",
+    "# print(', '.join(sorted(list(set([font.name for font in fontManager.ttflist if not font.name.startswith('Noto')])))))\n",
+    "\n",
+    "DPI = 600\n",
     "device = 'cuda'"
    ]
   },
