--- a/notes/note_metrics.ipynb
+++ b/notes/note_metrics.ipynb
@@ -40,6 +40,7 @@
     "os.chdir(project_root)\n",
     "print('now working', project_root)\n",
     "\n",
+    "DPI = 600\n",
     "\n",
     "sns.set_theme(style=\"ticks\", palette=\"tab10\")\n",
     "# sns.set_theme(style=\"white\")\n",
@@ -50,15 +51,14 @@
     "plt.rcParams['axes.titlesize'] = 14  \n",
     "plt.rcParams['xtick.labelsize'] = 10  \n",
     "plt.rcParams['ytick.labelsize'] = 10 \n",
+    "plt.rcParams['figure.dpi'] = DPI\n",
     "\n",
     "os.makedirs('out/figs', exist_ok=True)\n",
     "\n",
     "fix_global_seed()\n",
     "\n",
-    "print(f\"デフォルトのフォント: {plt.rcParams['font.sans-serif']}\")\n",
-    "# print(', '.join(sorted(list(set([font.name for font in fontManager.ttflist if not font.name.startswith('Noto')])))))\n",
-    "\n",
-    "DPI = 600"
+    "# print(f\"デフォルトのフォント: {plt.rcParams['font.sans-serif']}\")\n",
+    "# print(', '.join(sorted(list(set([font.name for font in fontManager.ttflist if not font.name.startswith('Noto')])))))"
    ]
   },
   {
