--- a/notes/note_dataset.ipynb
+++ b/notes/note_dataset.ipynb
@@ -285,7 +285,7 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame([i.asdict() for i in ds.items])\n"
+    "df = pd.DataFrame([i.asdict() for i in ds.items])"
    ]
   },
   {
