--- a/notes/note_metrics.ipynb
+++ b/notes/note_metrics.ipynb
@@ -197,15 +197,16 @@
     "DPI = 300\n",
     "\n",
     "sns.set_theme(style=\"ticks\", palette=\"tab10\")\n",
-    "# sns.set_theme(style=\"white\")\n",
-    "# plt.rcParams['font.family'] = 'DejaVu Sans'\n",
-    "# plt.rcParams['font.family'] = 'Verdana'\n",
-    "plt.rcParams['font.size'] = 12\n",
-    "plt.rcParams['axes.labelsize'] = 14 \n",
-    "plt.rcParams['axes.titlesize'] = 24 \n",
-    "plt.rcParams['xtick.labelsize'] = 12\n",
-    "plt.rcParams['ytick.labelsize'] = 12\n",
-    "plt.rcParams['figure.dpi'] = DPI\n",
+    "\n",
+    "plt.rcParams.update({\n",
+    "    'font.size': 14,\n",
+    "    'axes.titlesize': 18,\n",
+    "    'axes.labelsize': 16,\n",
+    "    'xtick.labelsize': 14,\n",
+    "    'ytick.labelsize': 14,\n",
+    "    'legend.fontsize': 16,\n",
+    "    'figure.dpi': 300,\n",
+    "})\n",
     "\n",
     "os.makedirs('out/figs', exist_ok=True)\n",
     "\n",
